--- a/View/page/admin/adminList.html
+++ b/View/page/admin/adminList.html
@@ -22,6 +22,9 @@
         <a class="layui-btn search_btn">查询</a>
     </div>
     <div class="layui-inline">
+        <a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
+    </div>
+    <div class="layui-inline">
         <a class="layui-btn layui-btn-normal adminAdd_btn">添加管理员</a>
     </div>
     <div class="layui-inline">
@@ -31,36 +34,37 @@
         <div class="layui-form-mid layui-word-aux"></div>
     </div>
 </blockquote>
-<div class="layui-form news_list">
+<div class="layui-form admin_list">
     <table class="layui-table">
         <colgroup>
-            <col width="50">
-            <col>
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
-            <col width="9%">
+            <col width="5%">
+            <col width="10%">
+            <col width="10%">
+            <col width="10%">
+            <col width="8%">
+            <col width="12%">
             <col width="15%">
+            <col width="5%">
+            <col width="25%">
         </colgroup>
         <thead>
         <tr>
             <th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-            <th style="text-align:left;">用户名</th>
+            <th>用户名</th>
             <th>昵称</th>
-            <th>头像</th>
-            <th>性别</th>
+            <th>角色</th>
             <th>年龄</th>
             <th>手机号</th>
             <th>邮箱</th>
+            <th>状态</th>
             <th>操作</th>
         </tr>
         </thead>
-        <tbody class="news_content"></tbody>
+        <tbody class="admin_content"></tbody>
     </table>
 </div>
 <div id="page"></div>
 <script type="text/javascript" src="../../layui/layui.js"></script>
-<script type="text/javascript" src="newsList.js"></script>
+<script type="text/javascript" src="adminList.js"></script>
 </body>
 </html>
