--- a/View/page/news/newsList.html
+++ b/View/page/news/newsList.html
@@ -22,26 +22,21 @@
 		    <a class="layui-btn search_btn">查询</a>
 		</div>
 		<div class="layui-inline">
+			<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
+		</div>
+		<div class="layui-inline">
 			<a class="layui-btn layui-btn-normal newsAdd_btn">添加文章</a>
 		</div>
 		<div class="layui-inline">
-			<a class="layui-btn recommend" style="background-color:#5FB878">推荐文章</a>
-		</div>
-		<div class="layui-inline">
-			<a class="layui-btn audit_btn">审核文章</a>
-		</div>
-		<div class="layui-inline">
 			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
-		</div>
-		<div class="layui-inline">
-			<div class="layui-form-mid layui-word-aux">本页面刷新后除新添加的文章外所有操作无效，关闭页面所有数据重置</div>
 		</div>
 	</blockquote>
 	<div class="layui-form news_list">
 	  	<table class="layui-table">
 		    <colgroup>
-				<col width="50">
+				<col width="41">
 				<col>
+				<col width="9%">
 				<col width="9%">
 				<col width="9%">
 				<col width="9%">
@@ -53,10 +48,11 @@
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
 					<th style="text-align:left;">文章标题</th>
+					<th>文章分类</th>
 					<th>发布人</th>
-					<th>审核状态</th>
-					<th>浏览权限</th>
+					<th>浏览量</th>
 					<th>是否展示</th>
+					<th>是否置顶</th>
 					<th>发布时间</th>
 					<th>操作</th>
 				</tr> 
