--- a/View/page/news/newsEdit.html
+++ b/View/page/news/newsEdit.html
@@ -12,23 +12,23 @@
 	<link rel="stylesheet" href="../../layui/css/layui.css" media="all" />
 </head>
 <style>
-	a.img{
-		display: block;
-		width: 100px;
-		height: 100px;
-		margin: 0 auto;
-		margin-bottom: 15px;
-	}
-	a.img img{
-		display: block;
-		border: none;
-		width: 100%;
-		height: 100%;
-		border-radius: 50%;
-		-webkit-border-radius: 50%;
-		-moz-border-radius: 50%;
-		border: 4px solid #44576b;
-	}
+    a.img{
+        display: block;
+        width: 100px;
+        height: 100px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
+    a.img img{
+        display: block;
+        border: none;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border: 4px solid #44576b;
+    }
 </style>
 <body class="childrenBody">
 	<form class="layui-form">
@@ -39,13 +39,6 @@
 			</div>
 		</div>
 		<div class="layui-form-item">
-			<div class="layui-inline">
-				<label class="layui-form-label">自定义属性</label>
-				<div class="layui-input-block">
-					<input type="checkbox" name="top" class="top" title="置顶">
-					<input type="checkbox" name="show" class="show" title="展示">
-				</div>
-			</div>
 			<div class="layui-inline">		
 				<label class="layui-form-label">文章作者</label>
 				<div class="layui-input-inline">
@@ -96,12 +89,11 @@
 		</div>
 		<div class="layui-form-item">
 			<div class="layui-input-block">
-				<button class="layui-btn" lay-submit="" lay-filter="addNews">立即提交</button>
-				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+				<button class="layui-btn" lay-submit="" lay-filter="editNews">立即提交</button>
 		    </div>
 		</div>
 	</form>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="newsAdd.js"></script>
+		<script type="text/javascript" src="newsEdit.js"></script>
 </body>
 </html>
