--- a/View/page/news/scenicList.html
+++ b/View/page/news/scenicList.html
@@ -30,18 +30,6 @@
 		<div class="layui-inline">
 			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
 		</div>
-		<form class="layui-form">
-			<div class="layui-form-item">
-				<div class="layui-inline">
-					<label class="layui-form-label">文章分类</label>
-					<div class="layui-input-inline">
-						<select name="type" class="type">
-							<option value="0">-请选择-</option>
-						</select>
-					</div>
-				</div>
-			</div>
-		</form>
 	</blockquote>
 	<div class="layui-form news_list">
 	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
@@ -53,19 +41,16 @@
 				<col width="9%">
 				<col width="9%">
 				<col width="9%">
-				<col width="9%">
-				<col width="15%">
 		    </colgroup>
 		    <thead>
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-					<th style="text-align:left;">文章标题</th>
-					<th>文章分类</th>
-					<th>发布人</th>
+					<th style="text-align:left;">景点</th>
 					<th>浏览量</th>
 					<th>是否展示</th>
 					<th>是否置顶</th>
 					<th>发布时间</th>
+					<th>推荐星级</th>
 					<th>操作</th>
 				</tr> 
 		    </thead>
@@ -74,6 +59,6 @@
 	</div>
 	<div id="page"></div>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="newsList.js"></script>
+	<script type="text/javascript" src="scenicList.js"></script>
 </body>
 </html>
