--- a/View/page/news/scenicList.html
+++ b/View/page/news/scenicList.html
@@ -11,10 +11,10 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="../../layui/css/layui.css" media="all" />
 	<link rel="stylesheet" href="//at.alicdn.com/t/font_tnyc012u2rlwstt9.css" media="all" />
-	<link rel="stylesheet" href="../../css/news.css" media="all" />
+	<link rel="stylesheet" href="../../css/scenic.css" media="all" />
 </head>
 <body class="childrenBody">
-	<blockquote class="layui-elem-quote news_search">
+	<blockquote class="layui-elem-quote scenic_search">
 		<div class="layui-inline">
 		    <div class="layui-input-inline">
 		    	<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
@@ -25,22 +25,23 @@
 			<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
 		</div>
 		<div class="layui-inline">
-			<a class="layui-btn layui-btn-normal newsAdd_btn">添加文章</a>
+			<a class="layui-btn layui-btn-normal scenicAdd_btn">添加景点</a>
 		</div>
 		<div class="layui-inline">
 			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
 		</div>
 	</blockquote>
-	<div class="layui-form news_list">
+	<div class="layui-form scenic_list">
 	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
 		    <colgroup>
-				<col width="41">
+				<col width="2%">
 				<col>
-				<col width="9%">
-				<col width="9%">
-				<col width="9%">
-				<col width="9%">
-				<col width="9%">
+				<col width="12%">
+				<col width="12%">
+				<col width="12%">
+				<col width="12%">
+				<col width="12%">
+				<col width="12%">
 		    </colgroup>
 		    <thead>
 				<tr>
@@ -54,7 +55,7 @@
 					<th>操作</th>
 				</tr> 
 		    </thead>
-		    <tbody class="news_content"></tbody>
+		    <tbody class="scenic_content"></tbody>
 		</table>
 	</div>
 	<div id="page"></div>
