--- a/View/page/activity/routeAdd.html
+++ b/View/page/activity/routeAdd.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>景点添加--layui后台管理模板</title>
+	<title>路线添加--layui后台管理模板</title>
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -32,27 +32,22 @@
 </style>
 <body class="childrenBody">
 	<form class="layui-form">
-		<div class="layui-form-item">
+		<div class="layui-inline">
 			<label class="layui-form-label">景点</label>
-			<div class="layui-input-block">
-				<input type="text" name="sname" class="layui-input sname" lay-verify="required" placeholder="请输入景点名称">
+			<div class="layui-input-inline">
+				<select name="sname" class="sname" lay-filter="browseLook">
+					<option value="0">-请选择-</option>
+				</select>
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<div class="layui-inline">
-				<label class="layui-form-label">自定义属性</label>
+				<label class="layui-form-label">路线名称</label>
 				<div class="layui-input-block">
-					<input type="checkbox" name="top" class="top" title="置顶">
-					<input type="checkbox" name="show" class="show" title="展示">
+					<input type="text" name="rname" class="layui-input rname" lay-verify="required" placeholder="请输入路线名称">
 				</div>
 			</div>
-			<div class="layui-inline">		
-				<label class="layui-form-label">推荐星级</label>
-				<div class="layui-input-inline">
-					<input type="text" name="recommend" class="layui-input recommend" lay-verify="required" placeholder="请输入推荐星级">
-				</div>
-			</div>
-			<div class="layui-inline">		
+			<div class="layui-inline">
 				<label class="layui-form-label">发布时间</label>
 				<div class="layui-input-inline">
 					<input type="text" name="created_at" class="layui-input created_at" lay-verify="required|date" onclick="layui.laydate({elem:this})">
@@ -60,25 +55,31 @@
 			</div>
 		</div>
 		<div class="layui-form-item">
-			<label class="layui-form-label">简介</label>
+			<label class="layui-form-label">类型</label>
 			<div class="layui-input-block">
-				<textarea placeholder="请输入景区简介" name="brief" class="layui-textarea"></textarea>
+				<input type="text" name="type" class="layui-input type" lay-verify="required" placeholder="请输入类型，例：一日游/二日游">
 			</div>
 		</div>
 		<div class="layui-form-item">
-			<label class="layui-form-label">内容</label>
+			<label class="layui-form-label">时间</label>
 			<div class="layui-input-block">
-				<textarea class="layui-textarea layui-hide" lay-verify="content" id="scenic_intro"></textarea>
+				<input type="text" name="time" class="layui-input time" lay-verify="required" placeholder="请输入时间，例：上午或第一日">
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">路线</label>
+			<div class="layui-input-block">
+				<textarea placeholder="请按顺序输入景点名，以“-”分隔。例：黄洋界-大井-八面山" name="route" class="layui-textarea"></textarea>
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<div class="layui-input-block">
-				<button class="layui-btn" lay-submit="" lay-filter="addScenic">立即提交</button>
+				<button class="layui-btn" lay-submit="" lay-filter="addRoute">立即提交</button>
 				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
 		    </div>
 		</div>
 	</form>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="scenicAdd.js"></script>
+	<script type="text/javascript" src="routeAdd.js"></script>
 </body>
 </html>
