--- a/View/page/main.html
+++ b/View/page/main.html
@@ -31,7 +31,7 @@
 				<div class="panel_icon" style="background-color:#FF5722;">
 					<i class="iconfont icon-dongtaifensishu" data-icon="icon-dongtaifensishu"></i>
 				</div>
-				<div class="panel_word userAll">
+				<div class="panel_word userNew">
 					<span></span>
 					<cite>新增人数</cite>
 				</div>
@@ -49,7 +49,7 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/img/images.html">
+			<a href="javascript:;" data-url="page/share/photoList.html">
 				<div class="panel_icon" style="background-color:#5FB878;">
 					<i class="layui-icon" data-icon="&#xe64a;">&#xe64a;</i>
 				</div>
@@ -60,13 +60,13 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/news/newsList.html">
+			<a href="javascript:;" data-url="page/share/photowaitList.html">
 				<div class="panel_icon" style="background-color:#F7B824;">
-					<i class="iconfont icon-wenben" data-icon="icon-wenben"></i>
+					<i class="layui-icon" data-icon="&#xe64a;">&#xe64a;</i>
 				</div>
-				<div class="panel_word waitNews">
+				<div class="panel_word waitPhotos">
 					<span></span>
-					<cite>待审核文章</cite>
+					<cite>待审核图片</cite>
 				</div>
 			</a>
 		</div>
@@ -95,7 +95,7 @@
 			</table>
 		</div>
 		<div class="sysNotice col">
-			<blockquote class="layui-elem-quote title">最新文章<i class="iconfont icon-new1"></i></blockquote>
+			<blockquote class="layui-elem-quote title">景区新闻<i class="iconfont icon-new1"></i></blockquote>
 			<table class="layui-table" lay-skin="line">
 				<colgroup>
 					<col>
