--- a/View/page/user/changePwd.html
+++ b/View/page/user/changePwd.html
@@ -48,6 +48,6 @@
 	</form>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
 	<script type="text/javascript" src="address.js"></script>
-	<script type="text/javascript" src="user.js"></script>
+	<script type="text/javascript" src="../admin/admin.js"></script>
 </body>
 </html>
