--- a/View/page/user/userlist.html
+++ b/View/page/user/userlist.html
@@ -21,15 +21,6 @@
 		    </div>
 		    <a class="layui-btn search_btn">查询</a>
 		</div>
-		<div class="layui-inline">
-			<a class="layui-btn layui-btn-normal usersAdd_btn">添加用户</a>
-		</div>
-		<div class="layui-inline">
-			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
-		</div>
-		<div class="layui-inline">
-			<div class="layui-form-mid layui-word-aux">　本页面刷新后除新添加的文章外所有操作无效，关闭页面所有数据重置</div>
-		</div>
 	</blockquote>
 	<div class="layui-form users_list">
 	  	<table class="layui-table">
@@ -37,22 +28,24 @@
 				<col width="50">
 				<col>
 				<col width="18%">
-				<col width="8%">
-				<col width="12%">
-				<col width="12%">
 				<col width="18%">
+				<col width="8%">
 				<col width="15%">
+				<col width="8%">
+				<col width="8%">
+				<col width="14%">
 		    </colgroup>
 		    <thead>
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-					<th>登录名</th>
-					<th>邮箱</th>
+					<th>头像</th>
+					<th>Openid</th>
+					<th>微信号</th>
 					<th>性别</th>
-					<th>会员等级</th>
-					<th>会员状态</th>
-					<th>最后登录时间</th>
-					<th>操作</th>
+					<th>昵称</th>
+					<th>城市</th>
+					<th>国家</th>
+					<th>创建时间</th>
 				</tr> 
 		    </thead>
 		    <tbody class="users_content"></tbody>
@@ -60,6 +53,6 @@
 	</div>
 	<div id="page"></div>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="allUsers.js"></script>
+	<script type="text/javascript" src="userlist.js"></script>
 </body>
 </html>
