1.添加laydate独立插件 2.所有数据页面查询功能添加日期查询，完成关键字查询 3.增加系统设置 4.菜单权限功能，主界面权限 5.主界面数据动态获取 6.加入系统消息功能 7.删除settimeout 8.数据库文件更新

--- a/View/page/admin/adminAdd.html
+++ b/View/page/admin/adminAdd.html
@@ -30,7 +30,7 @@
 				<label class="layui-form-label">角色</label>
 				<div class="layui-input-block">
 					<input type="radio" name="role" lay-filter="role" value="照片审核管理员" title="照片审核管理员">
-					<input type="radio" name="role" lay-filter="role" value="系统审核管理员" title="系统审核管理员" >
+					<input type="radio" name="role" lay-filter="role" value="内容管理员" title="内容管理员" >
 				</div>
 			</div>
 		</div>
