--- a/View/page/main.html
+++ b/View/page/main.html
@@ -27,7 +27,7 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/user/allUsers.html">
+			<a href="javascript:;" data-url="page/user/newuserlist.html">
 				<div class="panel_icon" style="background-color:#FF5722;">
 					<i class="iconfont icon-dongtaifensishu" data-icon="icon-dongtaifensishu"></i>
 				</div>
@@ -38,7 +38,7 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/user/allUsers.html">
+			<a href="javascript:;" data-url="page/user/userlist.html">
 				<div class="panel_icon" style="background-color:#009688;">
 					<i class="layui-icon" data-icon="&#xe613;">&#xe613;</i>
 				</div>
@@ -49,7 +49,7 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/share/photoList.html">
+			<a href="javascript:;" id="picall" data-url="page/share/photoList.html">
 				<div class="panel_icon" style="background-color:#5FB878;">
 					<i class="layui-icon" data-icon="&#xe64a;">&#xe64a;</i>
 				</div>
@@ -60,7 +60,7 @@
 			</a>
 		</div>
 		<div class="panel col">
-			<a href="javascript:;" data-url="page/share/photowaitList.html">
+			<a href="javascript:;" id="picwait" data-url="page/share/photowaitList.html">
 				<div class="panel_icon" style="background-color:#F7B824;">
 					<i class="layui-icon" data-icon="&#xe64a;">&#xe64a;</i>
 				</div>
@@ -71,7 +71,7 @@
 			</a>
 		</div>
 		<div class="panel col max_panel">
-			<a href="javascript:;" data-url="page/news/newsList.html">
+			<a href="javascript:;" id="newsall" data-url="page/news/newsList.html">
 				<div class="panel_icon" style="background-color:#2F4056;">
 					<i class="iconfont icon-text" data-icon="icon-text"></i>
 				</div>
@@ -84,16 +84,6 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="sysNotice col">
-			<blockquote class="layui-elem-quote title">日志消息</blockquote>
-			<table class="layui-table" lay-skin="line">
-				<colgroup>
-					<col>
-					<col width="110">
-				</colgroup>
-				<tbody class="hot_news"></tbody>
-			</table>
-		</div>
 		<div class="sysNotice col">
 			<blockquote class="layui-elem-quote title">景区新闻<i class="iconfont icon-new1"></i></blockquote>
 			<table class="layui-table" lay-skin="line">
