--- a/View/index.html
+++ b/View/index.html
@@ -60,7 +60,7 @@
 					</li>
 					<li class="layui-nav-item" pc>
 						<a href="javascript:;">
-							<img src="images/face.jpg" class="layui-circle" width="35" height="35">
+							<img src="images/face.jpg" id="head_pic" class="layui-circle" width="35" height="35">
 							<cite id="nickname">请叫我马哥</cite>
 						</a>
 						<dl class="layui-nav-child">
@@ -76,7 +76,7 @@
 		<!-- 左侧导航 -->
 		<div class="layui-side layui-bg-black">
 			<div class="user-photo">
-				<a class="img" title="我的头像" ><img src="images/face.jpg"></a>
+				<a class="img" title="我的头像" ><img class="head_pic" src="images/face.jpg"></a>
 				<p>你好！<span class="userName">请叫我马哥</span>, 欢迎登录</p>
 			</div>
 			<div class="navBar layui-side-scroll"></div>
@@ -91,7 +91,7 @@
 				  <li class="layui-nav-item">
 				    <a href="javascript:;"><i class="iconfont icon-caozuo"></i> 页面操作</a>
 				    <dl class="layui-nav-child">
-					  <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon">&#x1002;</i> 刷新当前</a></dd>
+					  <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon">&#xe9aa;</i> 刷新当前</a></dd>
 				      <dd><a href="javascript:;" class="closePageOther"><i class="iconfont icon-prohibit"></i> 关闭其他</a></dd>
 				      <dd><a href="javascript:;" class="closePageAll"><i class="iconfont icon-guanbi"></i> 关闭全部</a></dd>
 				    </dl>
