--- a/View/page/admin/adminList.html
+++ b/View/page/admin/adminList.html
@@ -37,14 +37,14 @@
 <div class="layui-form admin_list">
     <table class="layui-table">
         <colgroup>
+            <col width="50">
+            <col width="10%">
+            <col width="10%">
+            <col width="10%">
             <col width="5%">
-            <col width="10%">
-            <col width="10%">
-            <col width="10%">
-            <col width="8%">
             <col width="12%">
             <col width="15%">
-            <col width="5%">
+            <col width="8%">
             <col width="25%">
         </colgroup>
         <thead>
