--- a/View/page/share/photoList.html
+++ b/View/page/share/photoList.html
@@ -16,6 +16,11 @@
 <body class="childrenBody">
 	<blockquote class="layui-elem-quote photo_search">
 		<div class="layui-inline">
+			<div class="layui-input-inline">
+				<input readonly type="text" class="layui-input" id="start" placeholder="时间" lay-key="1">
+			</div>
+		</div>
+		<div class="layui-inline">
 		    <div class="layui-input-inline">
 		    	<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
 		    </div>
@@ -54,6 +59,7 @@
 		</table>
 	</div>
 	<div id="page"></div>
+	<script type="text/javascript" src="../../laydate/laydate.js"></script>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
 	<script type="text/javascript" src="photoList.js"></script>
 </body>
