1.系统信息动态获取 2.系统默认设置运用 3.数据库文件更新

--- a/View/index.html
+++ b/View/index.html
@@ -119,5 +119,6 @@
 	<script src="/Media/Js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript" src="Media/Js/index.js"></script>
+	<script type="text/javascript" src="Media/Js/system.js"></script>
 </body>
 </html>
