--- a/View/page/main.html
+++ b/View/page/main.html
@@ -98,5 +98,7 @@
 
 	<script type="text/javascript" src="../layui/layui.js"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+	<script src="/Media/Js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="/Media/Js/system.js"></script>
 </body>
 </html>
