--- a/View/page/login/login.html
+++ b/View/page/login/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>井冈山云平台后台管理系统</title>
+	<title></title>
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -18,7 +18,7 @@
 	</video>
 	<div class="video_mask"></div>
 	<div class="login">
-	    <h1>井冈山云平台-管理登录</h1>
+	    <h1 id="title"></h1>
 	    <form class="layui-form">
 	    	<div class="layui-form-item">
 				<input class="layui-input" name="username" placeholder="用户名" lay-verify="required" type="text" autocomplete="off">
@@ -39,6 +39,7 @@
 	<script type="text/javascript" src="/layui/layui.js"></script>
 	<script type="text/javascript" src="login.js"></script>
 	<script src="/Media/Js/jquery-2.1.1.min.js"></script>
+	<script src="/Media/Js/system.js"></script>
 	<script type="text/javascript" src="/Media/Js/verifycode.js"></script>
 </body>
 </html>
