1.系统设置功能模块完成 2.数据库文件更新 3.菜单修改

--- a/View/page/activity/scenicList.html
+++ b/View/page/activity/scenicList.html
@@ -39,19 +39,21 @@
 	<div class="layui-form scenic_list">
 	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
 		    <colgroup>
-				<col width="2%">
+				<col width="50">
 				<col>
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
 				<col width="25%">
 		    </colgroup>
 		    <thead>
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
 					<th style="text-align:left;">景点</th>
+					<th>所在景区</th>
 					<th>浏览量</th>
 					<th>是否展示</th>
 					<th>是否置顶</th>
