--- a/View/page/activity/scenicAdd.html
+++ b/View/page/activity/scenicAdd.html
@@ -46,17 +46,25 @@
 					<input type="checkbox" name="show" class="show" title="展示">
 				</div>
 			</div>
-			<div class="layui-inline">		
+			<div class="layui-inline">
 				<label class="layui-form-label">推荐星级</label>
 				<div class="layui-input-inline">
 					<input type="text" name="recommend" class="layui-input recommend" lay-verify="required" placeholder="请输入推荐星级">
 				</div>
 			</div>
-			<div class="layui-inline">		
+			<div class="layui-inline">
 				<label class="layui-form-label">发布时间</label>
-				<div class="layui-input-inline">
+				<div class="layui-input-block">
 					<input type="text" name="created_at" class="layui-input created_at" lay-verify="required|date" onclick="layui.laydate({elem:this})">
 				</div>
+			</div>
+		</div>
+		<div class="layui-form-item">
+			<label class="layui-form-label">景区</label>
+			<div class="layui-input-block">
+				<select name="area" class="newsLook" lay-filter="browseLook">
+					<option value="0">-请选择-</option>
+				</select>
 			</div>
 		</div>
 		<div class="layui-form-item">
