--- a/View/page/share/photoList.html
+++ b/View/page/share/photoList.html
@@ -36,12 +36,13 @@
 	<div class="layui-form photo_list">
 	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
 		    <colgroup>
-				<col width="2%">
+				<col width="50">
 				<col>
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
-				<col width="12%">
+				<col width="20%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
+				<col width="10%">
 				<col width="25%">
 		    </colgroup>
 		    <thead>
@@ -51,7 +52,8 @@
 					<th>描述</th>
 					<th>时间</th>
 					<th>审核状态</th>
-					<th>操作人</th>
+					<th>审核人</th>
+					<th>置顶</th>
 					<th>操作</th>
 				</tr> 
 		    </thead>
