--- a/View/page/user/userlist.html
+++ b/View/page/user/userlist.html
@@ -18,9 +18,9 @@
 	<blockquote class="layui-elem-quote news_search">
 		<div class="layui-inline">
 			<div class="layui-input-inline">
-				<input type="radio" lay-filter="sex" name="sex" value="-1" title="全部" checked=""><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>男</div></div>
-				<input type="radio" lay-filter="sex" name="sex" value="1" title="男"><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>男</div></div>
-				<input type="radio" lay-filter="sex" name="sex" value="0" title="女"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>女</div></div>
+				<input type="radio" lay-filter="sex" name="sex" value="-1" title="全部" checked="">
+				<input type="radio" lay-filter="sex" name="sex" value="1" title="男">
+				<input type="radio" lay-filter="sex" name="sex" value="0" title="女">
 			</div>
 			<div class="layui-inline">
 			<div class="layui-input-inline">
