--- a/View/page/user/newuserlist.html
+++ b/View/page/user/newuserlist.html
@@ -14,45 +14,61 @@
 	<link rel="stylesheet" href="../../css/user.css" media="all" />
 </head>
 <body class="childrenBody">
+<div class="layui-form">
 	<blockquote class="layui-elem-quote news_search">
 		<div class="layui-inline">
-		    <div class="layui-input-inline">
-		    	<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
-		    </div>
-		    <a class="layui-btn search_btn">查询</a>
+			<div class="layui-input-inline">
+				<input type="radio" lay-filter="sex" name="sex" value="-1" title="全部" checked="">
+				<input type="radio" lay-filter="sex" name="sex" value="1" title="男">
+				<input type="radio" lay-filter="sex" name="sex" value="0" title="女">
+			</div>
+			<div class="layui-inline">
+				<div class="layui-input-inline">
+					<input readonly type="text" class="layui-input" id="start" placeholder="时间" lay-key="1">
+				</div>
+			</div>
+			<div class="layui-input-inline">
+				<input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
+			</div>
+			<a class="layui-btn search_btn">查询</a>
+			<div class="layui-inline">
+				<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
+			</div>
 		</div>
 	</blockquote>
-	<div class="layui-form users_list">
-	  	<table class="layui-table">
-		    <colgroup>
-				<col width="50">
-				<col>
-				<col width="18%">
-				<col width="18%">
-				<col width="8%">
-				<col width="15%">
-				<col width="8%">
-				<col width="8%">
-				<col width="14%">
-		    </colgroup>
-		    <thead>
-				<tr>
-					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
-					<th>头像</th>
-					<th>Openid</th>
-					<th>微信号</th>
-					<th>性别</th>
-					<th>昵称</th>
-					<th>城市</th>
-					<th>国家</th>
-					<th>创建时间</th>
-				</tr> 
-		    </thead>
-		    <tbody class="users_content"></tbody>
-		</table>
-	</div>
-	<div id="page"></div>
-	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="newuserlist.js"></script>
+</div>
+<div class="layui-form users_list">
+	<table class="layui-table">
+		<colgroup>
+			<col width="50">
+			<col>
+			<col width="18%">
+			<col width="18%">
+			<col width="8%">
+			<col width="15%">
+			<col width="8%">
+			<col width="8%">
+			<col width="14%">
+		</colgroup>
+		<thead>
+		<tr>
+			<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
+			<th>头像</th>
+			<th>Openid</th>
+			<th>微信号</th>
+			<th>性别</th>
+			<th>昵称</th>
+			<th>城市</th>
+			<th>国家</th>
+			<th>创建时间</th>
+		</tr>
+		</thead>
+		<tbody class="users_content"></tbody>
+	</table>
+</div>
+<div id="page"></div>
+<script type="text/javascript" src="../../laydate/laydate.js"></script>
+<script type="text/javascript" src="../../layui/layui.js"></script>
+<script type="text/javascript" src="newuserlist.js"></script>
 </body>
 </html>
