路线结构修改

--- a/View/page/activity/routeAdd.html
+++ b/View/page/activity/routeAdd.html
@@ -33,9 +33,9 @@
 <body class="childrenBody">
 	<form class="layui-form">
 		<div class="layui-inline">
-			<label class="layui-form-label">景点</label>
+			<label class="layui-form-label">景区</label>
 			<div class="layui-input-inline">
-				<select name="sname" class="sname" lay-filter="browseLook">
+				<select name="aname" class="aname" lay-filter="browseLook">
 					<option value="0">-请选择-</option>
 				</select>
 			</div>
