--- a/View/page/activity/routeEdit.html
+++ b/View/page/activity/routeEdit.html
@@ -35,7 +35,7 @@
 	<div class="layui-inline">
 		<label class="layui-form-label">景点</label>
 		<div class="layui-input-block">
-			<input type="text" name="sname" disabled class="layui-input sname">
+			<input type="text" name="aname" disabled class="layui-input aname">
 		</div>
 	</div>
 	<div class="layui-form-item">
