加入验证方法

--- a/View/page/admin/adminAdd.html
+++ b/View/page/admin/adminAdd.html
@@ -16,20 +16,20 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户名</label>
 			<div class="layui-input-block">
-				<input type="text" name="username" class="layui-input adminName" lay-verify="required" placeholder="请输入用户名">
+				<input type="text" name="username" class="layui-input adminName" lay-verify="required|username" placeholder="请输入用户名">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">昵称</label>
 			<div class="layui-input-block">
-				<input type="text" name="nickname" class="layui-input" lay-verify="required" placeholder="请输入昵称">
+				<input type="text" name="nickname" class="layui-input" lay-verify="required|nickname" placeholder="请输入昵称">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<div class="layui-inline">
 				<label class="layui-form-label">角色</label>
 				<div class="layui-input-block">
-					<input type="radio" name="role" lay-filter="role" value="照片审核管理员" title="照片审核管理员">
+					<input type="radio" name="role" lay-filter="role" value="照片审核管理员" title="照片审核管理员" checked>
 					<input type="radio" name="role" lay-filter="role" value="内容管理员" title="内容管理员" >
 				</div>
 			</div>
