--- a/View/page/news/newsAdd.html
+++ b/View/page/news/newsAdd.html
@@ -35,7 +35,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">文章标题</label>
 			<div class="layui-input-block">
-				<input type="text" name="title" class="layui-input title" lay-verify="required" placeholder="请输入文章标题">
+				<input type="text" name="title" class="layui-input title" lay-verify="required|title" placeholder="请输入文章标题">
 			</div>
 		</div>
 		<div class="layui-form-item">
@@ -49,13 +49,13 @@
 			<div class="layui-inline">		
 				<label class="layui-form-label">文章作者</label>
 				<div class="layui-input-inline">
-					<input type="text" name="operator" class="layui-input operator" lay-verify="required" placeholder="请输入文章作者">
+					<input type="text" name="operator" class="layui-input operator" lay-verify="required|author" placeholder="请输入文章作者">
 				</div>
 			</div>
 			<div class="layui-inline">		
 				<label class="layui-form-label">发布时间</label>
 				<div class="layui-input-inline">
-					<input type="text" name="created_at" class="layui-input created_at" lay-verify="required|date" onclick="layui.laydate({elem:this})">
+					<input type="text" readonly id="start" name="created_at" class="layui-input created_at" lay-verify="required|date" lay-key="1">
 				</div>
 			</div>
 			<div class="layui-inline">
@@ -79,19 +79,19 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">关键字</label>
 			<div class="layui-input-block">
-				<input type="text" class="layui-input" name="keyword" placeholder="请输入文章关键字">
+				<input type="text" class="layui-input" name="keyword" lay-verify="required|keyword" lay- placeholder="请输入文章关键字">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">内容摘要</label>
 			<div class="layui-input-block">
-				<textarea placeholder="请输入内容摘要" name="abstract" class="layui-textarea"></textarea>
+				<textarea placeholder="请输入内容摘要" name="abstract" lay-verify="required|abstract" class="layui-textarea"></textarea>
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">文章内容</label>
 			<div class="layui-input-block">
-				<textarea class="layui-textarea layui-hide" lay-verify="content" id="news_content"></textarea>
+				<textarea class="layui-textarea layui-hide" lay-verify="content" lay-verify="required" id="news_content"></textarea>
 			</div>
 		</div>
 		<div class="layui-form-item">
@@ -101,6 +101,7 @@
 		    </div>
 		</div>
 	</form>
+	<script type="text/javascript" src="../../laydate/laydate.js"></script>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
 	<script type="text/javascript" src="newsAdd.js"></script>
 </body>
