--- a/View/page/activity/routeEdit.html
+++ b/View/page/activity/routeEdit.html
@@ -42,7 +42,7 @@
 		<div class="layui-inline">
 			<label class="layui-form-label">路线名称</label>
 			<div class="layui-input-block">
-				<input type="text" name="rname" class="layui-input rname" lay-verify="required" placeholder="请输入路线名称">
+				<input type="text" name="rname" class="layui-input rname" lay-verify="required|routename" placeholder="请输入路线名称">
 			</div>
 		</div>
 	</div>
@@ -55,7 +55,6 @@
 	<div class="layui-form-item">
 		<div class="layui-input-block">
 			<button class="layui-btn" lay-submit="" lay-filter="editRoute">立即提交</button>
-			<button type="reset" class="layui-btn layui-btn-primary">重置</button>
 		</div>
 	</div>
 </form>
