--- a/View/page/login/login.html
+++ b/View/page/login/login.html
@@ -12,11 +12,7 @@
 	<link rel="stylesheet" href="../../layui/css/layui.css" media="all" />
 	<link rel="stylesheet" href="../../css/login.css" media="all" />
 </head>
-<body>
-	<video class="video-player" preload="auto" autoplay="autoplay" loop="loop" data-height="1080" data-width="1920" height="1080" width="1920">
-	    <source src="login.mp4" type="video/mp4">
-	</video>
-	<div class="video_mask"></div>
+<body background="/images/loginbg.jpg" style="background-repeat:no-repeat ;background-size:100% 100%;background-attachment: fixed;">
 	<div class="login">
 	    <h1 id="title"></h1>
 	    <form class="layui-form">
