1.管理员信息验证修改 2.图库图片排列修改 3.图库图片可点击放大查看

--- a/View/page/admin/adminAdd.html
+++ b/View/page/admin/adminAdd.html
@@ -43,13 +43,13 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">手机号</label>
 			<div class="layui-input-block">
-				<input type="text" name="phone" class="layui-input" lay-verify="required|phone" placeholder="请输入手机号">
+				<input type="text" name="phone" class="layui-input" lay-verify="required|phone|checkPhone" placeholder="请输入手机号">
 			</div>
 		</div>
 		<div class="layui-form-item">
 			<label class="layui-form-label">邮箱</label>
 			<div class="layui-input-block">
-				<input type="text" name="email" class="layui-input" lay-verify="required|email" placeholder="请输入邮箱">
+				<input type="text" name="email" class="layui-input" lay-verify="required|email|checkEmail" placeholder="请输入邮箱">
 			</div>
 		</div>
 		<div class="layui-form-item">
