--- a/View/page/news/areaList.html
+++ b/View/page/news/areaList.html
@@ -30,7 +30,7 @@
 			<a class="layui-btn layui-btn-warm showAll_btn">显示全部</a>
 		</div>
 		<div class="layui-inline">
-			<a class="layui-btn layui-btn-normal areaAdd_btn">添加景点</a>
+			<a class="layui-btn layui-btn-normal areaAdd_btn">添加景区</a>
 		</div>
 		<div class="layui-inline">
 			<a class="layui-btn layui-btn-danger batchDel">批量删除</a>
