--- a/View/page/share/photos.html
+++ b/View/page/share/photos.html
@@ -15,6 +15,7 @@
 <body class="childrenBody">
 <form class="layui-form">
     <ul id="Images"></ul>
+    <!--<img alt="" style="display:none" id="displayimg" src="" />-->
 </form>
 <script type="text/javascript" src="../../layui/layui.js"></script>
 <script type="text/javascript" src="photos.js"></script>
