--- a/View/page/admin/adminInfo.html
+++ b/View/page/admin/adminInfo.html
@@ -30,25 +30,25 @@
 			<div class="layui-form-item">
 			    <label class="layui-form-label">昵称</label>
 			    <div class="layui-input-block">
-			    	<input type="text" value="" placeholder="请输入昵称" lay-verify="required" class="layui-input nickname">
+			    	<input type="text" value="" placeholder="请输入昵称" lay-verify="required|nickname" class="layui-input nickname">
 			    </div>
 			</div>
 			<div class="layui-form-item">
 			    <label class="layui-form-label">手机号码</label>
 			    <div class="layui-input-block">
-			    	<input type="tel" value="" placeholder="请输入手机号码" lay-verify="required|phone" class="layui-input phone">
+			    	<input type="tel" value="" placeholder="请输入手机号码" lay-verify="required|phone|checkPhone" class="layui-input phone">
 			    </div>
 			</div>
 			<div class="layui-form-item">
 			    <label class="layui-form-label">年龄</label>
 				<div class="layui-input-block">
-					<input type="tel" value="" placeholder="请输入年龄" lay-verify="number" class="layui-input age">
+					<input type="tel" value="" placeholder="请输入年龄" lay-verify="required|number" class="layui-input age">
 				</div>
 			</div>
 			<div class="layui-form-item">
 			    <label class="layui-form-label">邮箱</label>
 			    <div class="layui-input-block">
-			    	<input type="text" value="" placeholder="请输入邮箱" lay-verify="email" class="layui-input email">
+			    	<input type="text" value="" placeholder="请输入邮箱" lay-verify="required|email|checkEmail" class="layui-input email">
 			    </div>
 			</div>
 		</div>
