1.锁屏修改 2.锁屏样式修改 3.主页点击更多进入新闻列表界面

--- a/View/index.html
+++ b/View/index.html
@@ -61,7 +61,7 @@
 					<li class="layui-nav-item" pc>
 						<a href="javascript:;">
 							<img src="images/face.jpg" id="head_pic" class="layui-circle" width="35" height="35">
-							<cite id="nickname">请叫我马哥</cite>
+							<cite id="nickname">请叫我666</cite>
 						</a>
 						<dl class="layui-nav-child">
 							<dd><a href="javascript:;" data-url="page/admin/adminInfo.html"><i class="iconfont icon-zhanghu" data-icon="icon-zhanghu"></i><cite>个人资料</cite></a></dd>
@@ -77,7 +77,7 @@
 		<div class="layui-side layui-bg-black">
 			<div class="user-photo">
 				<a class="img" title="我的头像" ><img class="head_pic" src="images/face.jpg"></a>
-				<p>你好！<span class="userName">请叫我马哥</span>, 欢迎登录</p>
+				<p>你好！<span class="userName">请叫我666</span>, 欢迎登录</p>
 			</div>
 			<div class="navBar layui-side-scroll"></div>
 		</div>
