--- a/View/page/main.html
+++ b/View/page/main.html
@@ -85,7 +85,7 @@
 	</div>
 	<div class="row">
 		<div class="sysNotice col">
-			<blockquote class="layui-elem-quote title">景区新闻<i class="iconfont icon-new1"></i></blockquote>
+			<blockquote class="layui-elem-quote title">景区新闻<i class="iconfont icon-new1"></i><i id="morenews" data-url="page/news/newsList.html" title="点击查看更多" style="float: right;cursor: pointer;position:relative;top:5px;" class="layui-icon"><i style="display: none" class="iconfont icon-text" data-icon="icon-text"></i><cite style="display: none;">景区新闻</cite><span style="font-size:12px;position:relative;top:-8px;">更多</span>&#xe65f;</i></blockquote>
 			<table class="layui-table" lay-skin="line">
 				<colgroup>
 					<col>
