--- a/View/page/news/areaEdit.html
+++ b/View/page/news/areaEdit.html
@@ -61,7 +61,7 @@
 	<div class="layui-form-item">
 		<label class="layui-form-label">内容</label>
 		<div class="layui-input-block">
-			<textarea class="layui-textarea layui-hide" lay-verify="required|content" id="area_intro"></textarea>
+			<textarea class="layui-textarea layui-hide" lay-verify="content" id="area_intro"></textarea>
 		</div>
 	</div>
 	<div class="layui-form-item">
