--- a/View/page/news/newsAdd.html
+++ b/View/page/news/newsAdd.html
@@ -91,7 +91,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">文章内容</label>
 			<div class="layui-input-block">
-				<textarea class="layui-textarea layui-hide" lay-verify="required|content" id="news_content"></textarea>
+				<textarea class="layui-textarea layui-hide" lay-verify="content" id="news_content"></textarea>
 			</div>
 		</div>
 		<div class="layui-form-item">
