景点增加图片

--- a/View/page/activity/scenicAdd.html
+++ b/View/page/activity/scenicAdd.html
@@ -60,6 +60,15 @@
 			</div>
 		</div>
 		<div class="layui-form-item">
+			<label class="layui-form-label">景点图片</label>
+			<div class="layui-inline">
+				<div class="layui-input-inline">
+					<a class="img"><img id="pic" src="/images/default.png"></a>
+					<input type="file" name="file" class="layui-upload-file">
+				</div>
+			</div>
+		</div>
+		<div class="layui-form-item">
 			<label class="layui-form-label">景区</label>
 			<div class="layui-input-block">
 				<select name="area" class="newsLook" lay-filter="browseLook">
