路线加入路线图

--- a/View/page/activity/routeAdd.html
+++ b/View/page/activity/routeAdd.html
@@ -73,6 +73,15 @@
 			</div>
 		</div>
 		<div class="layui-form-item">
+			<label class="layui-form-label">路线图</label>
+			<div class="layui-inline">
+				<div class="layui-input-inline">
+					<a class="img"><img id="pic" src="/images/default.png"></a>
+					<input type="file" name="file" class="layui-upload-file">
+				</div>
+			</div>
+		</div>
+		<div class="layui-form-item">
 			<div class="layui-input-block">
 				<button class="layui-btn" lay-submit="" lay-filter="addRoute">立即提交</button>
 				<button type="reset" class="layui-btn layui-btn-primary">重置</button>
