--- a/View/page/activity/routeList.html
+++ b/View/page/activity/routeList.html
@@ -37,12 +37,18 @@
 		</div>
 	</blockquote>
 	<div class="layui-form route_list">
+		<form id="uploadForm" action="/index.php/route/JudgeOperate/pic" method="post" target="myiframe" enctype="multipart/form-data" style="width:auto;display:none;">
+			<input id="routeid" name="routeid" type="hidden" />
+			<input type="file" accept="image/gif, image/jpeg,image/png" name="uploadfile" id="uploadfile" onchange="fileSelected();" style="display:none;">
+		</form>
+		<iframe id="myiframe" name="myiframe" style="display:none;"></iframe>
 	  	<table class="layui-table" lay-data="{initSort:{field:'time', type:'desc'}}">
 		    <colgroup>
 				<col width="2%">
-				<col width="12%">
-				<col width="12%">
+				<col width="5%">
 				<col>
+				<col width="12%">
+				<col width="12%">
 				<col width="12%">
 				<col width="12%">
 				<col width="12%">
@@ -52,6 +58,7 @@
 				<tr>
 					<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose" id="allChoose"></th>
 					<th style="text-align:left;">景区</th>
+					<th>路线图</th>
 					<th>名称</th>
 					<th>推荐路线</th>
 					<th>类型</th>
@@ -67,5 +74,6 @@
 	<script type="text/javascript" src="../../laydate/laydate.js"></script>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
 	<script type="text/javascript" src="routeList.js"></script>
+	<script type="text/javascript" src="routePic.js"></script>
 </body>
 </html>
