--- a/View/page/admin/adminAdd.html
+++ b/View/page/admin/adminAdd.html
@@ -54,7 +54,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">邮箱</label>
 			<div class="layui-input-block">
-				<input type="text" name="email" class="layui-input" lay-verify="email|checkEmail" placeholder="请输入邮箱">
+				<input type="text" name="email" class="layui-input" placeholder="请输入邮箱">
 			</div>
 		</div>
 		<div class="layui-form-item">
