--- a/View/page/admin/adminInfo.html
+++ b/View/page/admin/adminInfo.html
@@ -30,7 +30,7 @@
 			<div class="layui-form-item">
 			    <label class="layui-form-label">昵称</label>
 			    <div class="layui-input-block">
-			    	<input type="text" value="" placeholder="请输入昵称" lay-verify="required|nickname" class="layui-input nickname">
+			    	<input type="text" disabled value="" class="layui-input nickname">
 			    </div>
 			</div>
 			<div class="layui-form-item">
@@ -48,7 +48,7 @@
 			<div class="layui-form-item">
 			    <label class="layui-form-label">邮箱</label>
 			    <div class="layui-input-block">
-			    	<input type="text" value="" placeholder="请输入邮箱" lay-verify="required|email|checkEmail" class="layui-input email">
+			    	<input type="text" value="" placeholder="请输入邮箱" class="layui-input email">
 			    </div>
 			</div>
 		</div>
